@startuml

class Booking {
    +int BookingID
    +int UserID
    +int? WorkspaceID
    +int? ParkingSpaceID
    +DateTime BookingDate
    +DateTime StartDateTime
    +DateTime EndDateTime
    +int BookingStatusID
    +string? AdditionalRequirements
    +User User
    +Workspace Workspace
    +ParkingSpace ParkingSpace
    +BookingStatus BookingStatus
}

class BookingStatus {
    +int BookingStatusID
    +string StatusName
    +string Description
    +boolean IsActive
    +ICollection<Booking> Bookings
}

class Department {
    +int DepartmentID
    +string DepartmentName
    +ICollection<User> Users
}

class Role {
    +int RoleID
    +string RoleName
    +ICollection<User> Users
}

class Office {
    +int OfficeID
    +string OfficeName
    +string Location
    +int Capacity
    +string Phone
    +ICollection<Floor> Floors
}

class Floor {
    +int FloorID
    +string FloorName
    +int OfficeID
    +byte[] ImageData
    +string ImageMimeType
    +ICollection<Workspace> Workspaces
    +ICollection<ParkingSpace> ParkingSpaces
}

class User {
    +int UserID
    +string Name
    +string Login
    +string Email
    +string PhoneNumber
    +string PasswordHash
    +int RoleID
    +int? DepartmentID
    +Role Role
    +Department Department
    +ICollection<Booking> Bookings
    +ICollection<UserPassword> UserPasswords
}

class ParkingSpace {
    +int ParkingSpaceID
    +int FloorID
    +string Label
    +string Position
    +boolean IsAvailable
    +Floor Floor
    +ICollection<Booking> Bookings
}

class UserPassword {
    +int UserPasswordID
    +int UserID
    +string PasswordHash
    +string Salt
    +User User
}

class Workspace {
    +int WorkspaceID
    +int FloorID
    +string Label
    +string Type
    +boolean IsAvailable
    +string Position
    +Floor Floor
    +ICollection<Booking> Bookings
}

BookingStatus "1" -- "0..*" Booking : has
Department "1" -- "0..*" User : employs
Role "1" -- "0..*" User : assigned
Office "1" -- "0..*" Floor : contains
Floor "1" -- "0..*" Workspace : contains
Floor "1" -- "0..*" ParkingSpace : contains
User "1" -- "0..*" Booking : makes
Workspace "1" -- "0..*" Booking : reserved
ParkingSpace "1" -- "0..*" Booking : reserved
User "1" -- "0..*" UserPassword : has

@enduml